fix: change Spring Security CORS origins